--- a/src/ContaCorrente.Extrato/ContaCorrente.Extrato.API/appsettings.json
+++ b/src/ContaCorrente.Extrato/ContaCorrente.Extrato.API/appsettings.json
@@ -5,9 +5,12 @@
     }
   },
   "RedisCfg": {
-    "Endpoint": "localhost",
-    "Port": 6379
+    "Endpoint": "contacorrentedb.redis.cache.windows.net",
+    "Port": 6380,
+    "Pws": "ZrtKuqd1PS2NH8VRwC9z1CfTede5vNvNCTUevn5v04A"
   },
-  "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SuperdigitalDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ExtratolDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  },
   "AllowedHosts": "*"
-}
+  }
