--- a/src/ContaCorrente.Extrato/ContaCorrente.Extrato.API/appsettings.json
+++ b/src/ContaCorrente.Extrato/ContaCorrente.Extrato.API/appsettings.json
@@ -4,13 +4,9 @@
       "Default": "Warning"
     }
   },
-  "RedisCfg": {
-    "Endpoint": "contacorrentedb.redis.cache.windows.net",
-    "Port": 6380,
-    "Pws": "ZrtKuqd1PS2NH8VRwC9z1CfTede5vNvNCTUevn5v04A"
-  },
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ExtratolDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "RedisConnection": "contacorrentedb.redis.cache.windows.net:6380,password=ZrtKuqd1PS2NH8VRwC9z1CfTede5vNvNCTUevn5v04A=,ssl=True,abortConnect=False,",
+    "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ExtratoDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
   },
   "AllowedHosts": "*"
-  }
+}
