--- a/src/ContaCorrente.Extrato/ContaCorrente.Extrato.API/ContaCorrente.Extrato.API.csproj
+++ b/src/ContaCorrente.Extrato/ContaCorrente.Extrato.API/ContaCorrente.Extrato.API.csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <UserSecretsId>b168d2d1-318c-4d09-80b7-44e1812a859c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
   </ItemGroup>
 
