--- a/src/ContaCorrente.Extrato/ContaCorrente.Extrato.Infra.CacheAdaptador/ContaCorrente.Extrato.Infra.CacheAdaptador.csproj
+++ b/src/ContaCorrente.Extrato/ContaCorrente.Extrato.Infra.CacheAdaptador/ContaCorrente.Extrato.Infra.CacheAdaptador.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.2.0" />
   </ItemGroup>
 
