--- a/src/ContaCorrente.Lacamentos/ContaCorrente.Lacamentos/appsettings.json
+++ b/src/ContaCorrente.Lacamentos/ContaCorrente.Lacamentos/appsettings.json
@@ -6,7 +6,7 @@
   },
   "ServiceBusConfig": {
     "ConnectionString": "Endpoint=sb://contacorrentesb.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=nxrH7AHcrd+1cudlaSXHbFf8MpYHgStJ0dBKL1y7/5A=",
-    "QueueName": "lancamentosqueue"
+    "Queue": "https://contacorrentesb.servicebus.windows.net/lancamentosqueue"
   },
   "AllowedHosts": "*"
 }
