--- a/src/ContaCorrente.Extrato.Processadores/ContaCorrente.Extrato.Processadores/ContaCorrente.Extrato.Processadores.csproj
+++ b/src/ContaCorrente.Extrato.Processadores/ContaCorrente.Extrato.Processadores/ContaCorrente.Extrato.Processadores.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ContaCorrente.Extrato.Processadores.Dominio\ContaCorrente.Extrato.Processadores.Dominio.csproj" />
+    <ProjectReference Include="..\ContaCorrente.Extrato.Processadores.Infra.ExtratoRepositorio\ContaCorrente.Extrato.Processadores.Infra.ExtratoRepositorio.csproj" />
+    <ProjectReference Include="..\ContaCorrente.Extrato.Processadores.Infra.Mensageria\ContaCorrente.Extrato.Processadores.Infra.Mensageria.csproj" />
   </ItemGroup>
 </Project>
